Renamed js file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	</div>
 
 	<script type="text/javascript" src="files/scripts/time.js"></script>
-	<script type="text/javascript" src="files/scripts/scripts.js"></script>
+	<script type="text/javascript" src="files/scripts/index.js"></script>
 
 </body>
 
