--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>My Timer</title>
 
-	<link rel="stylesheet" type="text/css" href="files/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="files/styles/styles.css">
 
 </head>
 
