Fixed broken link

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
 <body class="container">
 
-	<form action="files/login.php" class="centered">
+	<form action="files/scripts/login.php" class="centered">
 		
 		<input name="emailAddress" placeholder="Email Address"><br><br>
 		<input type="password" name="password" placeholder="Password"><br><br>
