--- a/login.html
+++ b/login.html
@@ -12,9 +12,9 @@
 
 <body class="container">
 
-	<form action="files/scripts/login.php" class="centered">
+	<form action="files/scripts/login.php" class="centered" method="post">
 		
-		<input name="emailAddress" placeholder="Email Address"><br><br>
+		<input name="email" placeholder="Email Address"><br><br>
 		<input type="password" name="password" placeholder="Password"><br><br>
 		<input type="submit">
 
